<resources>
    <string name="app_name">CarbonTracker</string>
    <string name="create_journey_button">CREATE NEW JOURNEY</string>
    <string name="create_utilities_bill_button">CREATE NEW UTILITY BILL</string>
    <string name="view_utilities_bill_button">Utilites</string>
    <string name="view_carbon_footprint_button">Carbon Footprint</string>\
    <string name="Additional_Info">Displacement vol: %1$f Transmission type: %2$s</string>
    <string name="Car_Description">%1$s $2$s %3$d %4$s</string>
    <string name="select_car_description">Select your car in this journey from the drop down list.
        \nPress edit icon to edit/delete selected car.
        \nPress plus icon to add new car to the list </string>
    <string name="select_car_button_text">SELECT CAR</string>
    <string name="add_car_button_text">NEW CAR</string>
    <string name="edit_delete_car_button_text">EDIT/DELETE CAR</string>
    <string name="error_no_car">Error: No car currently available</string>
    <string name="enter_nickname_textView">Enter Nickname: </string>
    <string name="nickname_hint">Nickname</string>
    <string name="nickname_input_error">Error: Nickname must contain at least 1 character</string>
    <string name="deleted_car_message">Car has been deleted</string>
    <string name="confirm_saving_data_message">Save the following change: %1$s ?</string>
    <string name="saved_data_message">Saved edited information</string>
    <string name="make_spinner_header">Select Make:</string>
    <string name="model_spinner_header">Select Model:</string>
    <string name="year_spinner_header">Select Year:</string>
    <string name="search_button_text">Search</string>
    <string name="select_car_popup_title">Select your car model: </string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">CANCEL</string>
    <string name="car_existed_message">Car already existed</string>
    <string name="select_route_description">Select your route for this journey from the drop down list.
        \nPress Edit/Delete Route to edit/delete selected route.
        \nPress New Route to add new route to the list.</string>
    <string name="select_route_button_text">SELECT ROUTE</string>
    <string name="new_route_button_text">NEW ROUTE</string>
    <string name="edit_route_button_text">EDIT ROUTE</string>
    <string name="delete_route_button_text">DELETE ROUTE</string>
    <string name="error_no_route_selected">Error: No route available for select</string>
    <string name="route_name_text">Route Name:</string>
    <string name="route_city_distance_text">City Distance(km):</string>
    <string name="route_highway_distance_text">Highway Distance(km)</string>
    <string name="add_route_button_text">ADD ROUTE</string>
    <string name="load_car_completed">Load completed</string>
    <string name="load_make_completed">Load Make completed</string>
    <string name="selected_entries_title">Your selected entry is: %1s </string>
    <string name="edit_nickname_text">Edit Car Nickname: </string>
    <string name="edit_car_entries_text">Edit Car Entries(Make, Model, Year): </string>
    <string name="confirm_delete_route_text">Do you want to delete this route?</string>
    <string name="delete_text">Delete</string>
    <string name="save_car_info_button_text">Save Car Information</string>
    <string name="welcomeMessage1">Want to save the Earth?</string>
    <string name="welcomeMessage2">Click the picture!</string>
    <string name="skip">SKIP</string>
    <string name="table_header">SUMMARY OF CARBON FOOTPRINT</string>
    <string name="journey_date_header">Date</string>
    <string name="journey_distance_header">Distance\n(km) </string>
    <string name="journey_car_name_header">Car Name </string>
    <string name="emission_type_header">Emission Type</string>
    <string name="emission_name_header">Emission Name</string>
    <string name="emission_value_header">Emission Value\n</string>
    <string name="emission_value_formatted_string">%.3f</string>
    <string name="journey_carbon_emission_header">Carbon Emission\n</string>
    <string name="switch_button">SWITCH TO PIE CHART/TABLE</string>
    <string name="existing_car_text">Existing Routes</string>
    <string name="no_existing_car_text">No Existing Routes</string>
    <string name="select_bill_text">Select bill: </string>
    <string name="enter_bill_amount_text">Amount\n(kWh or GJ): </string>
    <string name="enter_bill_amount_hint"><font size="15">Amount of gas or electricity</font></string>
    <string name="select_start_date_text">Starting \nbilling date</string>
    <string name="select_end_date_text">Last \nbilling date: </string>
    <string name="select_start_date_hint"><font size="15">Select first date of your bill</font></string>
    <string name="select_end_date_hint"> <font size="15">Select last date of your bill</font></string>
    <string name="amount_people_text">Number of people: </string>
    <string name="amount_people_hint"><font size="15">People in household</font></string>
    <string name="add_bill_button_text">ADD BILL</string>
    <string name="electricity_bill">ELECTRICITY</string>
    <string name="gas_bill">GAS</string>
    <string name="bill_amount_error">Error: Amount of consumption must be greater than 0</string>
    <string name="number_of_people_error">Error: Amount of people must be greater than 0</string>
    <string name="add_bill_button_error">Error: Not all entries required are filled</string>
    <string name="date_order_error">Error: Starting date of the bill must be before end date of the bill</string>
    <string name="edit_delete_bill_description">Select the bill you want to retrieve information.\nClick on the bill and choose the action you want from the popup menu. Click plus icon to add new bill</string>
    <string name="select_bill_error">There are no bill to select</string>
    <string name="select_utilities_bill_popup_title">Select this bill for: </string>
    <string name="deleted_bill_confirmed">Bill Deleted</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="distance">Distance: </string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="nextTip">Next Tip</string>
    <string name="KM">KM</string>
    <string name="KG">KG</string>
    <string name="view_journey">Journey</string>
    <string name="route">Route</string>
    <string name="Car">Car</string>
    <string name="Bus">Bus</string>
    <string name="Skytrain">Skytrain</string>
    <string name="Bike">Bike</string>
    <string name="Walk">Walk</string>
    <string name="Total_Value">Your Emission </string>
    <string name="Actual_Value">Individual Emission</string>
    <string name="Target_Value">Target Emission</string>
    <string name="pie_chart_title">Pie Chart</string>
    <string name="line_chart_title">Line Chart</string>
    <string name="table_title">Table</string>
    <string name="Journey">Journey</string>
    <string name="Utilities">Utilities</string>
    <string name="select_time_range_popup">Select your time range:</string>
    <string name="mode_1_day">1 Day</string>
    <string name="mode_28_day">Last 28 Days</string>
    <string name="mode_365_day">Last 365 Days</string>
    <string name="calendar_header">Select your date: </string>
    <string name="distance_hwy">Distance (Hwy):</string>
    <string name="distance_city">Distance (City):</string>
    <string name="city_distance_km">City Distance (Km)</string>
    <string name="highway_distance_km">Highway Distance (Km)</string>
    <string name="journeys">Journeys:</string>
    <string name="edit_journey_title">Edit Journey</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="settings">Settings</string>
    <string name="about">ABOUT:\nThis is an app
        for tracking your daily activity and your carbon emission
        count. It can calculate the carbon
        amount you emitted based on your
        transportation(using car/bike/public
        transportation) and your use of
        utilities(gas/electricity). From these
        data, you can learn to be more conscious of your emission, reduce it,
        and adapt to an enviromental-friendly lifestyle.\nGROUP:\nThe group
        is 4 students that took CMPT276 course in Spring 2017 at SFU.
        Our group name is Salmon\nLINK TO SFU COMPUTING SCIENCE
        PAGE:\n<a href="https://www.sfu.ca/computing.html">https://www.sfu.ca/computing.html</a>\nRESOURCES:\nAll of our images do not belong to any member of the team and
        are found using Google search.
        All images belong to their rightful
        owner/creator.
    </string>
    <string name="loading_car_notification">Still loading car</string>
    <string name="about_header">About</string>


</resources>
