<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.cmpt276.carbontracker.UI.SelectRouteActivity">

    <TextView
        android:id="@+id/select_route_description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_route_description" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_route_spinner"
        android:layout_below="@+id/select_route_description_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />

    <Button
        android:text="@string/new_route_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddRoute"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_alignBaseline="@+id/buttonLaunchEditRoute"
        android:layout_alignBottom="@+id/buttonLaunchEditRoute"
        android:layout_toRightOf="@+id/buttonLaunchEditRoute"
        android:layout_toEndOf="@+id/buttonLaunchEditRoute" />

    <Button
        android:text="@string/delete_route_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDeleteRoute"
        android:layout_alignTop="@+id/buttonLaunchEditRoute"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/edit_route_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLaunchEditRoute"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/select_route_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/select_route_spinner"
        android:layout_marginTop="31dp"
        android:text="@string/select_route_button_text" />

</RelativeLayout>
