<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_city_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:text="@string/distance_city" />

    <TextView
        android:id="@+id/textView_hwy_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/distance_hwy"
        android:layout_below="@+id/editText_cityDistance"
        android:layout_alignLeft="@+id/textView_city_distance"
        android:layout_alignStart="@+id/textView_city_distance" />

    <EditText
        android:id="@+id/editText_cityDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/city_distance_km"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/editText_hwyDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_hwy_distance"
        android:layout_alignBottom="@+id/textView_hwy_distance"
        android:layout_alignLeft="@+id/editText_cityDistance"
        android:layout_alignStart="@+id/editText_cityDistance"
        android:ems="10"
        android:hint="@string/highway_distance_km"
        android:inputType="numberSigned|numberDecimal" />
</RelativeLayout>