<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ca.cmpt276.carbontracker.UI.EditDeleteUtilitiesActivity">

    <RelativeLayout
        android:layout_width="382dp"
        android:layout_height="505dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:id="@+id/selectBillLayout"
            android:layout_width="330dp"
            android:layout_height="148dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/selectBillTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/edit_delete_bill_description"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="4dp" />

            <Spinner
                android:id="@+id/select_utilities_spinner"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/selectBillTextView"
                android:layout_marginTop="20dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="67dp" />

            <Button
                android:id="@+id/select_utilities_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/select_utilities_spinner"
                android:text="@string/select"
                tools:layout_editor_absoluteX="268dp"
                tools:layout_editor_absoluteY="119dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editBillLayout"
            android:layout_width="368dp"
            android:layout_height="382dp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="170dp"
            android:layout_below="@+id/selectBillLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/bill_textView"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_alignBottom="@+id/select_bill_type_spinner"
                android:layout_alignLeft="@+id/amount_TextView"
                android:layout_alignStart="@+id/amount_TextView"
                android:text="@string/select_bill_text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="34dp" />

            <Spinner
                android:id="@+id/select_bill_type_spinner"
                android:layout_width="228dp"
                android:layout_height="27dp"
                android:layout_alignLeft="@+id/bill_amount_editText"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/bill_amount_editText"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/amount_TextView"
                android:layout_width="84dp"
                android:layout_height="46dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bill_textView"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="26dp"
                android:text="@string/enter_bill_amount_text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="100dp" />

            <EditText
                android:id="@+id/bill_amount_editText"
                android:layout_width="232dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/amount_TextView"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/enter_bill_amount_hint"
                android:inputType="textPersonName|numberDecimal"
                android:selectAllOnFocus="false"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="83dp" />

            <TextView
                android:id="@+id/numb_of_people_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/amount_TextView"
                android:layout_alignLeft="@+id/amount_TextView"
                android:layout_alignRight="@+id/amount_TextView"
                android:layout_alignStart="@+id/amount_TextView"
                android:layout_below="@+id/amount_TextView"
                android:layout_marginTop="25dp"
                android:text="@string/amount_people_text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="182dp" />

            <EditText
                android:id="@+id/number_of_people_editText"
                android:layout_width="228dp"
                android:layout_height="45dp"
                android:layout_alignEnd="@+id/bill_amount_editText"
                android:layout_alignLeft="@+id/bill_amount_editText"
                android:layout_alignRight="@+id/bill_amount_editText"
                android:layout_alignStart="@+id/bill_amount_editText"
                android:layout_alignTop="@+id/numb_of_people_textView"
                android:ems="10"
                android:hint="@string/amount_people_hint"
                android:inputType="number"
                android:singleLine="false"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="165dp" />

            <TextView
                android:id="@+id/start_date_textView"
                android:layout_width="82dp"
                android:layout_height="44dp"
                android:layout_alignLeft="@+id/numb_of_people_textView"
                android:layout_alignStart="@+id/numb_of_people_textView"
                android:layout_below="@+id/number_of_people_editText"
                android:layout_marginTop="25dp"
                android:text="@string/select_start_date_text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="233dp" />

            <TextView
                android:id="@+id/select_start_date_trigger"
                android:layout_width="226dp"
                android:layout_height="35dp"
                android:layout_alignBottom="@+id/start_date_textView"
                android:layout_alignEnd="@+id/number_of_people_editText"
                android:layout_alignRight="@+id/number_of_people_editText"
                android:clickable="true"
                android:text="@string/select_start_date_hint"
                tools:layout_editor_absoluteX="142dp"
                tools:layout_editor_absoluteY="242dp" />

            <TextView
                android:id="@+id/end_date_textView"
                android:layout_width="79dp"
                android:layout_height="39dp"
                android:layout_alignLeft="@+id/start_date_textView"
                android:layout_alignStart="@+id/start_date_textView"
                android:layout_below="@+id/start_date_textView"
                android:layout_marginTop="24dp"
                android:text="@string/select_end_date_text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintRight_toLeftOf="@+id/select_end_date_trigger"
                tools:layout_editor_absoluteY="312dp" />

            <TextView
                android:id="@+id/select_end_date_trigger"
                android:layout_width="204dp"
                android:layout_height="35dp"
                android:layout_alignBaseline="@+id/end_date_textView"
                android:layout_alignBottom="@+id/end_date_textView"
                android:layout_alignLeft="@+id/select_start_date_trigger"
                android:layout_alignStart="@+id/select_start_date_trigger"
                android:clickable="true"
                android:text="@string/select_end_date_hint"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="316dp" />

            <Button
                android:id="@+id/save_bill_edited_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/select_bill_type_spinner"
                android:layout_alignRight="@+id/select_bill_type_spinner"
                android:layout_below="@+id/select_end_date_trigger"
                android:text="@string/save"
                tools:layout_editor_absoluteX="264dp"
                tools:layout_editor_absoluteY="441dp" />

        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
