<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.cmpt276.carbontracker.UI.AddRouteActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="72dp"
        android:id="@+id/editText_RouteName"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText_cityDistance"
        android:layout_alignStart="@+id/editText_cityDistance" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="36dp"
        android:id="@+id/editText_cityDistance"
        android:layout_below="@+id/editText_RouteName"
        android:layout_alignLeft="@+id/editText_highwayDistance"
        android:layout_alignStart="@+id/editText_highwayDistance" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:id="@+id/editText_highwayDistance"
        android:layout_below="@+id/editText_cityDistance"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <Button
        android:text="@string/add_route_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonAddRoute"
        android:layout_marginBottom="29dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/cancel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancel"
        android:layout_alignBaseline="@+id/ButtonAddRoute"
        android:layout_alignBottom="@+id/ButtonAddRoute"
        android:layout_toLeftOf="@+id/ButtonAddRoute"
        android:layout_toStartOf="@+id/ButtonAddRoute"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp" />

    <TextView
        android:text="@string/route_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_alignBaseline="@+id/editText_RouteName"
        android:layout_alignBottom="@+id/editText_RouteName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/route_city_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/editText_cityDistance"
        android:layout_alignBottom="@+id/editText_cityDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/route_highway_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/editText_highwayDistance"
        android:layout_alignBottom="@+id/editText_highwayDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
